--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1> This is my 4th time doing this..</h1>
-<img src="download.jpg">
+<img src="download (1).jpg">
 <p> This is my first sentence.</p>
 <p id="special">This is my second sentence.</p> 
 </body>
